LanguageTool Change Log

2.9 (release planned for 2015-03-30)

-English:
    -Added many new style rules contributed by Heikki Lehvaslaiho. As these
     may cause false alarms, they are not activated by default. You can
     activate them by turning on all rules in the new 'Plain English' category.

-Esperanto:
    -added a few new rules

-German:
    -added a few new rules

-Polish:
    -added a few new rules

-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
     -added and improved rules

-Bitext rules:
     -added a simple rule for checking whether translations end with the same punctuation
     mark as the original (this includes only .?! characters).

-Spelling:
    -The new files at <languageCode>/hunspell/spelling.txt can be used to add
     accepted words to the spell checker that are also considered when creating
     suggestions for misspelled words.
     This is similar to the <languageCode>/hunspell/ignore.txt files, which list
     accepted words which are *not* used when creating suggestions for
     misspelled words.

-API:
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.
    -'example' element: type="incorrect" is now optional if there's a 'correction'
     attribute. The 'correction' attribute implies that the sentence is incorrect.
    -'example' element: type="correct" is now optional. No 'type' attribute and
     no 'correction' attribute implies that the sentence is correct.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically