@@ -1287,7 +1287,7 @@ $Id$
             <rule>
                 <pattern>
                     <token>ad</token>
-                    <token regexp="yes">[eiou].*<exception>esempio</exception></token>
+                    <token regexp="yes">[eiou].*<exception regexp="yes">esempio|es</exception></token>
                 </pattern>
                 <message>L'uso della d eufonica dovrebbe essere limitato ai casi di incontro della stessa vocale: <suggestion>a <match no="2"></match></suggestion>.</message>
                 <example correction="a interpretare">Provo <marker>ad interpretare</marker> il tuo pensiero.</example>
@@ -1316,7 +1316,7 @@ $Id$
             <rule>
                 <pattern>
                     <token>a</token>
-                    <token regexp="yes">[a].*|esempio</token>
+                    <token regexp="yes">[a].*|esempio|es</token>
                 </pattern>
                 <message>In questo caso l'uso della 'd' eufonica è ammesso: <suggestion>ad <match no="2"></match></suggestion>.</message>
                 <example correction="ad arrivare">Provo <marker>a arrivare</marker> prima di te.</example>
@@ -1331,14 +1331,14 @@ $Id$
                 <message>In questo caso l'uso della 'd' eufonica è ammesso: <suggestion>ed <match no="2"></match></suggestion>.</message>
                 <example correction="ed effettua">Si concentra <marker>e effettua</marker> una bella manovra.</example>
             </rule>
-            <!-- togli od -->
+            <!-- metti od -->
             <rule>
                 <pattern>
                     <token>o</token>
                     <token regexp="yes">[o].*</token>
                 </pattern>
-                <message>In questo caso l'uso della 'd' eufonica è ammesso: <suggestion>ed <match no="2"></match></suggestion>.</message>
-                <example correction="ed ogni">Puoi vederlo ogni mattina <marker>o ogni</marker> sera.</example>
+                <message>In questo caso l'uso della 'd' eufonica è ammesso: <suggestion>od <match no="2"></match></suggestion>.</message>
+                <example correction="od ogni">Puoi vederlo ogni mattina <marker>o ogni</marker> sera.</example>
                 <example>Puoi vederlo ogni mattina <marker>od ogni</marker> sera.</example>
             </rule>
         </rulegroup>
