@@ -10,6 +10,9 @@ LanguageTool Change Log
 -Esperanto:
     -added a few new rules
 
+-Italian:
+    -improved a few rules
+
 -German:
     -added a few new rules
 
